@@ -233,6 +233,10 @@
 
       \item \command{R CMD check} gains option \option{--test-dir} to
       specify an alternative set of tests to run.
+      
+      \item \command{R CMD check} will now continue with testing after
+      many types of errors, and will output a summary count of errors at
+      the end if any have occurred.
     }
   }
 
